syntax = "proto3";

package test;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/test";

service Foo {
  rpc Foo(FooRequest) returns (FooResponse);
}

message FooRequest {}

message FooResponse {}
